--- a/.github/workflows/process-repos-dir.yaml
+++ b/.github/workflows/process-repos-dir.yaml
@@ -1,4 +1,4 @@
-name: Run process_repos_django.py
+name: Run process_repos_dir.py
 
 on:
   workflow_dispatch: 
@@ -19,7 +19,7 @@ jobs:
           python-version: '3.x'
 
       - name: Process repos
-        run: python process_repos_django.py 1
+        run: python process_repos_dir.py 1
 
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
