--- a/python/cookiecutter/cookiecutter-django/config.json
+++ b/python/cookiecutter/cookiecutter-django/config.json
@@ -1,11 +1,11 @@
 {
     "mode": "dir",
     "repo_url": "cookiecutter/cookiecutter-django",
-    "analyzer_args": "  ",
+    "analyzer_args": "--secondary-agent-provider openai --secondary-agent-model o3-mini --secondary-agent-temperature 1",
     "agent_provider": "google",
     "agent_model": "gemini-2.0-flash-thinking-exp",
     "agent_temperature": 0.7,
     "agent_prompt_types": [
-        "vulnerabilities"
+        "vulnerabilities-workflow-1"
     ]
 }
