--- a/go/mongodb/mongo-go-driver/config.json
+++ b/go/mongodb/mongo-go-driver/config.json
@@ -1,7 +1,7 @@
 {
     "mode": "dir",
     "repo_url": "mongodb/mongo-go-driver",
-    "analyzer_args": "-p go --secondary-agent-provider openai --secondary-agent-model o3-mini --secondary-agent-temperature 1 --files-context-window 170000 --files-chunk-size 140000",
+    "analyzer_args": "-p go --vulnerabilities-iterations 2 --files-context-window 180000 --files-chunk-size 150000",
     "agent_provider": "google",
     "agent_model": "gemini-2.0-flash-thinking-exp",
     "agent_temperature": 0.7,
