--- a/python/mbi/django-rosetta/config.json
+++ b/python/mbi/django-rosetta/config.json
@@ -1,7 +1,7 @@
 {
     "mode": "dir",
     "repo_url": "mbi/django-rosetta",
-    "analyzer_args": "--secondary-agent-provider openai --secondary-agent-model o3-mini --secondary-agent-temperature 1",
+    "analyzer_args": "--secondary-agent-provider openai --secondary-agent-model o3-mini --secondary-agent-temperature 1 --files-context-window 180000 --files-chunk-size 150000",
     "agent_provider": "google",
     "agent_model": "gemini-2.0-flash-thinking-exp",
     "agent_temperature": 0.7,
