--- a/typescript/alefragnani/vscode-bookmarks/config.json
+++ b/typescript/alefragnani/vscode-bookmarks/config.json
@@ -1,7 +1,7 @@
 {
     "mode": "dir",
     "repo_url": "alefragnani/vscode-bookmarks",
-    "analyzer_args": "-p javascript --secondary-agent-provider openai --secondary-agent-model o3-mini --secondary-agent-temperature 1",
+    "analyzer_args": "--vulnerabilities-threat-actor vscode_extension -p javascript --secondary-agent-provider openai --secondary-agent-model o3-mini --secondary-agent-temperature 1",
     "agent_provider": "google",
     "agent_model": "gemini-2.0-flash-thinking-exp",
     "agent_temperature": 0.7,
