--- a/typescript/jeff-hykin/better-cpp-syntax/config.json
+++ b/typescript/jeff-hykin/better-cpp-syntax/config.json
@@ -1,7 +1,7 @@
 {
     "mode": "dir",
     "repo_url": "jeff-hykin/better-cpp-syntax",
-    "analyzer_args": "--vulnerabilities-threat-actor vscode_extension -p javascript --secondary-agent-provider openai --secondary-agent-model o3-mini --secondary-agent-temperature 1",
+    "analyzer_args": "--vulnerabilities-threat-actor vscode_extension -p javascript --files-context-window 200000 --files-chunk-size 170000 --recursion-limit 100 --vulnerabilities-iterations 2",
     "agent_provider": "google",
     "agent_model": "gemini-2.0-flash-thinking-exp",
     "agent_temperature": 0.7,
