--- a/typescript/microsoft/vscode-js-debug/config.json
+++ b/typescript/microsoft/vscode-js-debug/config.json
@@ -1,7 +1,7 @@
 {
     "mode": "dir",
     "repo_url": "microsoft/vscode-js-debug",
-    "analyzer_args": "--vulnerabilities-threat-actor vscode_extension -p javascript --files-context-window 500000 --files-chunk-size 450000 --recursion-limit 100 --vulnerabilities-iterations 2",
+    "analyzer_args": "--vulnerabilities-threat-actor vscode_extension -p javascript --recursion-limit 100 --vulnerabilities-iterations 2 --exclude '**/testWorkspace/**'",
     "agent_provider": "google",
     "agent_model": "gemini-2.0-flash-thinking-exp",
     "agent_temperature": 0.7,
