--- a/typescript/dracula/visual-studio-code/config.json
+++ b/typescript/dracula/visual-studio-code/config.json
@@ -1,7 +1,7 @@
 {
     "mode": "dir",
     "repo_url": "dracula/visual-studio-code",
-    "analyzer_args": "--vulnerabilities-threat-actor vscode_extension -p javascript --secondary-agent-provider openai --secondary-agent-model o3-mini --secondary-agent-temperature 1",
+    "analyzer_args": "--vulnerabilities-threat-actor vscode_extension -p javascript --files-context-window 500000 --files-chunk-size 450000 --recursion-limit 100 --vulnerabilities-iterations 3 --exclude '**/.github/**'",
     "agent_provider": "google",
     "agent_model": "gemini-2.0-flash-thinking-exp",
     "agent_temperature": 0.7,
